Fix [#35541]: Point cache doesn't load existing frames from disk if cache file name is changed.